--- a/src/app/components/produtos-lista/produtos-lista.component.html
+++ b/src/app/components/produtos-lista/produtos-lista.component.html
@@ -1,3 +1,12 @@
-<p>
-  produtos-lista works!
-</p>
+<ion-card>
+	<img src="https://static.poder360.com.br/2020/09/Arroz-Supermercado-AltaPreco-Preco-Abastecimento-Alimento-114-scaled.jpg" />
+	<ion-card-header>
+		<ion-card-subtitle>Comper</ion-card-subtitle>
+	  	<ion-card-title>Arroz 5 Kg - R$ 25,00</ion-card-title>
+		<ion-card-subtitle>Foto tirada em perído promocional</ion-card-subtitle>
+	</ion-card-header>
+	<ion-card-content>
+		<ion-icon name="cart"></ion-icon>
+		<p>100 metros de distância</p>
+	</ion-card-content>
+</ion-card>
