--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,9 +1,13 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>home</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
-	<h1>TESTE</h1>
+	 <!-- fab placed to the bottom and start and on the bottom edge of the content overlapping footer with a list to the right -->
+	<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+	<ion-fab-button>
+		<ion-icon name="camera-outline"></ion-icon>
+	</ion-fab-button>
+	</ion-fab>
+
+	<app-produtos-lista></app-produtos-lista>
+
 </ion-content>
