--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,9 +1,14 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>home</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-menu-lateral></app-menu-lateral>
 
-<ion-content>
-	<h1>TESTE</h1>
+<ion-content id="main-content">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+        <ion-menu-button auto-hide="false"></ion-menu-button>
+      </ion-buttons>
+      <ion-title>
+        QUANTU
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
 </ion-content>
