refector: refetaraçao header com o menu lateral

--- a/src/app/auth/cadastro/cadastro.page.html
+++ b/src/app/auth/cadastro/cadastro.page.html
@@ -13,7 +13,7 @@
 				<ion-input type="email" placeholder="Email" formControlName="email"></ion-input>
 			</ion-item>
 			<ion-item lines="none" color="light" class="ion-no-inner-padding-end ion-margin">
-				<ion-input type="password" placeholder="Password" formControlName="password"></ion-input>
+				<ion-input type="password" placeholder="Senha" formControlName="password"></ion-input>
 			</ion-item>
 
 			<span class="ion-margin"></span>
