--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -11,7 +11,7 @@
 				<ion-input type="email" placeholder="Email" formControlName="email"></ion-input>
 			</ion-item>
 			<ion-item lines="none" color="light" class="ion-no-inner-padding-end ion-margin">
-				<ion-input type="password" placeholder="Password" formControlName="password"></ion-input>
+				<ion-input type="password" placeholder="Senha" formControlName="password"></ion-input>
 			</ion-item>
 
 			<!-- <ion-button expand="block" class="ion-margin-start ion-margin-end ion-margin-bottom" type="submit" [disabled]="!login.valid"> -->
