--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,12 @@
-ion-toolbar {
+#header-content {
+	display: flex;
+	flex-direction: row;
+}
+
+ion-title {
+	width: 100%;
+	position: absolute;
 	text-align: center;
+	top: 50%;
+	transform: translateY(-50%);
 }
