--- a/src/app/components/menu-lateral/menu-lateral.component.html
+++ b/src/app/components/menu-lateral/menu-lateral.component.html
@@ -11,24 +11,16 @@
             <ion-label>Perfil</ion-label>
         </ion-item>
         <ion-item>
-          <ion-icon name="paper-plane" slot="start"></ion-icon>
-          <ion-label>Outbox</ion-label>
+          <ion-icon name="cloud-upload-outline" slot="start"></ion-icon>
+          <ion-label>Produtos Enviados</ion-label>
         </ion-item>
+		<ion-item>
+			<ion-icon name="cart" slot="start"></ion-icon>
+			<ion-label>Produtos Perto de Você</ion-label>
+		  </ion-item>
         <ion-item>
-          <ion-icon name="heart" slot="start"></ion-icon>
-          <ion-label>Favorites</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="archive" slot="start"></ion-icon>
-          <ion-label>Archived</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="trash" slot="start"></ion-icon>
-          <ion-label>Trash</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="warning" slot="start"></ion-icon>
-          <ion-label>Spam</ion-label>
+          <ion-icon name="exit-outline" slot="start"></ion-icon>
+          <ion-label>Sair</ion-label>
         </ion-item>
       </ion-list>
     </ion-content>
