feat: adicionado tela de adicao de produto integrado com a camera nativa

--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -15,7 +15,7 @@
 			</ion-item>
 
 			<!-- <ion-button expand="block" class="ion-margin-start ion-margin-end ion-margin-bottom" type="submit" [disabled]="!login.valid"> -->
-			<ion-button expand="block" class="ion-margin-start ion-margin-end ion-margin-bottom" type="submit">
+			<ion-button (click)="redirectToHome()" expand="block" class="ion-margin-start ion-margin-end ion-margin-bottom" type="submit">
 				Entrar
 			</ion-button>
 			<span class="ion-margin"></span>
