--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,9 +3,9 @@
 <ion-content id="main-content">
 	<app-header [hasMenu]="true"></app-header>
 
-	<ion-fab vertical="bottom" horizontal="end" slot="fixed">
-		<ion-fab-button>
-			<ion-icon name="camera-outline"></ion-icon>
+	<ion-fab vertical="bottom" horizontal="end" slot="fixed" >
+		<ion-fab-button (click)="redirectToTakePhoto()">
+			<ion-icon name="camera"></ion-icon>
 		</ion-fab-button>
 	</ion-fab>
 
