--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,10 +1,9 @@
-
 <app-header></app-header>
 
 <ion-content [fullscreen]="true">
 	<ion-grid>
 	  <ion-row>
-		<ion-col class="ion-text-center form-login">
+		<ion-col class="ion-text-center">
 		  <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
 
 			<ion-item lines="none" color="light" class="ion-no-inner-padding-end ion-margin">
