--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,7 +5,7 @@
 
 	<ion-fab vertical="bottom" horizontal="end" slot="fixed" >
 		<ion-fab-button (click)="redirectToTakePhoto()">
-			<ion-icon name="camera"></ion-icon>
+			<ion-icon name="add-outline"></ion-icon>
 		</ion-fab-button>
 	</ion-fab>
 
