--- a/src/app/pages/photo/photo.page.html
+++ b/src/app/pages/photo/photo.page.html
@@ -2,19 +2,35 @@
 
 <ion-content id="main-content">
 	<app-header [hasMenu]="true"></app-header>
-	<ion-fab *ngIf="!photoService.photo" vertical="bottom" horizontal="end" slot="fixed" >
-	  	<ion-fab-button (click)="addPhotoToGallery()">
-			<ion-icon name="camera"></ion-icon>
-		</ion-fab-button>
-	</ion-fab>
 
 	<ion-grid>
 	  <ion-row>
 		<ion-col *ngIf="photoService.photo">
 		  <ion-img [src]="photoService.photo.webviewPath"></ion-img>
 		</ion-col>
-		<ion-col *ngIf="!photoService.photo">
-			<img src="assets/icons/mobile-tumb.png" />
+	  </ion-row>
+	  <ion-row>
+		<ion-col class="ion-text-center">
+			<form [formGroup]="productForm" (ngSubmit)="onLogin()">
+				<ion-item lines="none" color="light" class="ion-no-inner-padding-end ion-margin">
+					<ion-input type="text" placeholder="Nome do Produto" formControlName="nameProduct"></ion-input>
+				</ion-item>
+				<ion-item lines="none" color="light" class="ion-no-inner-padding-end ion-margin">
+					<ion-input type="text" placeholder="Nome do Mercado" formControlName="nameMarket"></ion-input>
+				</ion-item>
+				<ion-item lines="none" color="light" class="ion-no-inner-padding-end ion-margin">
+					<ion-input type="number" placeholder="Preço" formControlName="price"></ion-input>
+				</ion-item>
+
+				<ion-item lines="none" color="light" class="ion-no-inner-padding-end ion-margin">
+					<ion-label>Produto em promoção</ion-label>
+					<ion-checkbox mode="ios" color="primary" slot="start" formControlName="isPromotion"></ion-checkbox>
+				</ion-item>
+
+				<span class="ion-margin"></span>
+				<ion-button expand="block" class="ion-margin" (click)="addPhotoToGallery()" [disabled]="photoService.photo">Tirar Foto do Produto</ion-button>
+				<ion-button expand="block" class="ion-margin" (click)="addProduct()" [disabled]="!photoService.photo">Salvar</ion-button>
+			</form>
 		  </ion-col>
 	  </ion-row>
 	</ion-grid>
