--- a/src/app/components/menu-lateral/menu-lateral.component.html
+++ b/src/app/components/menu-lateral/menu-lateral.component.html
@@ -5,23 +5,27 @@
       </ion-toolbar>
     </ion-header>
     <ion-content>
-      <ion-list>
-        <ion-item>
-            <ion-icon name="person-circle-outline" slot="start"></ion-icon>
-            <ion-label>Perfil</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="cloud-upload-outline" slot="start"></ion-icon>
-          <ion-label>Produtos Enviados</ion-label>
-        </ion-item>
-		<ion-item>
-			<ion-icon name="cart" slot="start"></ion-icon>
-			<ion-label>Produtos Perto de Você</ion-label>
-		  </ion-item>
-        <ion-item>
-          <ion-icon name="exit-outline" slot="start"></ion-icon>
-          <ion-label>Sair</ion-label>
-        </ion-item>
-      </ion-list>
+		<ion-list>
+			<ion-item>
+				<ion-icon name="person-circle-outline" slot="start"></ion-icon>
+				<ion-label>Perfil</ion-label>
+			</ion-item>
+			<ion-item (click)="changeNavigation('/home')">
+				<ion-icon name="cart" slot="start"></ion-icon>
+				<ion-label>Produtos Perto de Você</ion-label>
+			</ion-item>
+			<ion-item (click)="changeNavigation('/photo')">
+				<ion-icon name="navigate-outline" slot="start"></ion-icon>
+				<ion-label>Adicionar Produto</ion-label>
+			</ion-item>
+			<ion-item>
+				<ion-icon name="cloud-upload-outline" slot="start"></ion-icon>
+				<ion-label>Produtos Enviados</ion-label>
+			</ion-item>
+			<ion-item>
+				<ion-icon name="exit-outline" slot="start"></ion-icon>
+				<ion-label>Sair</ion-label>
+			</ion-item>
+		</ion-list>
     </ion-content>
   </ion-menu>
