--- a/src/app/components/menu-lateral/menu-lateral.component.html
+++ b/src/app/components/menu-lateral/menu-lateral.component.html
@@ -6,7 +6,7 @@
     </ion-header>
     <ion-content>
 		<ion-list>
-			<ion-item>
+			<ion-item (click)="changeNavigation('/perfil')">
 				<ion-icon name="person-circle-outline" slot="start"></ion-icon>
 				<ion-label>Perfil</ion-label>
 			</ion-item>
