feat: refatoracao de alguns componentes

--- a/src/app/auth/cadastro/cadastro.page.html
+++ b/src/app/auth/cadastro/cadastro.page.html
@@ -18,7 +18,13 @@
 
 			<span class="ion-margin"></span>
 			<ion-button expand="block" class="ion-margin" href='/cadastro'>
-			  Cadastrar
+			  	Cadastrar
+			</ion-button>
+			<span class="ion-margin"></span>
+				<ion-text>ou</ion-text>
+			<span class="ion-margin"></span>
+			<ion-button expand="block" class="ion-margin" href='/login'>
+			  	Entre
 			</ion-button>
 		  </form>
 		</ion-col>
