--- a/src/app/auth/cadastro/cadastro.page.html
+++ b/src/app/auth/cadastro/cadastro.page.html
@@ -1,34 +1,11 @@
 <app-header></app-header>
 
 <ion-content [fullscreen]="true">
-	<ion-grid>
-	  <ion-row>
-		<ion-col class="ion-text-center form-login">
-		  <form [formGroup]="registerForm" (ngSubmit)="onLogin()">
+	<app-form
+		[formGroup] = "registerForm"
+		[formFields] = "formFields"
+		[formButtons] = "formButtons"
+	></app-form>
+</ion-content>
 
-			<ion-item lines="none" color="light" class="ion-no-inner-padding-end ion-margin">
-				<ion-input type="text" placeholder="Nome Completo" formControlName="name"></ion-input>
-			</ion-item>
-			<ion-item lines="none" color="light" class="ion-no-inner-padding-end ion-margin">
-				<ion-input type="email" placeholder="Email" formControlName="email"></ion-input>
-			</ion-item>
-			<ion-item lines="none" color="light" class="ion-no-inner-padding-end ion-margin">
-				<ion-input type="password" placeholder="Senha" formControlName="password"></ion-input>
-			</ion-item>
-
-			<span class="ion-margin"></span>
-			<ion-button expand="block" class="ion-margin" href='/cadastro'>
-			  	Cadastrar
-			</ion-button>
-			<span class="ion-margin"></span>
-				<ion-text>ou</ion-text>
-			<span class="ion-margin"></span>
-			<ion-button expand="block" class="ion-margin" href='/login'>
-			  	Entre
-			</ion-button>
-		  </form>
-		</ion-col>
-	  </ion-row>
-	</ion-grid>
-  </ion-content>
 
