--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,29 +1,9 @@
 <app-header></app-header>
 
 <ion-content [fullscreen]="true">
-	<ion-grid>
-	  <ion-row>
-		<ion-col class="ion-text-center">
-		  <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
-
-			<ion-item lines="none" color="light" class="ion-no-inner-padding-end ion-margin">
-				<ion-input type="email" placeholder="Email" formControlName="email"></ion-input>
-			</ion-item>
-			<ion-item lines="none" color="light" class="ion-no-inner-padding-end ion-margin">
-				<ion-input type="password" placeholder="Senha" formControlName="password"></ion-input>
-			</ion-item>
-
-			<ion-button (click)="redirectToHome()" expand="block" class="ion-margin-start ion-margin-end ion-margin-bottom" type="submit">
-				Entrar
-			</ion-button>
-			<span class="ion-margin"></span>
-				<ion-text>ou</ion-text>
-			<span class="ion-margin"></span>
-			<ion-button expand="block" class="ion-margin" href='/cadastro'>
-			  	Cadastre-se
-			</ion-button>
-		  </form>
-		</ion-col>
-	  </ion-row>
-	</ion-grid>
+	<app-form
+		[formGroup] = "loginForm"
+		[formFields] = "formFields"
+		[formButtons] = "formButtons"
+	></app-form>
 </ion-content>
