--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,5 +9,6 @@
 		</ion-fab-button>
 	</ion-fab>
 
-	<app-produtos-lista></app-produtos-lista>
+
+	<app-produtos-lista [productsList]="productsList"></app-produtos-lista>
 </ion-content>
