feat: adicionada rota para logout

--- a/src/app/components/menu-lateral/menu-lateral.component.html
+++ b/src/app/components/menu-lateral/menu-lateral.component.html
@@ -22,7 +22,7 @@
 				<ion-icon name="cloud-upload-outline" slot="start"></ion-icon>
 				<ion-label>Produtos Enviados</ion-label>
 			</ion-item>
-			<ion-item>
+			<ion-item (click)="changeNavigation('/login')">
 				<ion-icon name="exit-outline" slot="start"></ion-icon>
 				<ion-label>Sair</ion-label>
 			</ion-item>
