--- a/src/app/components/produtos-lista/produto/produto.component.html
+++ b/src/app/components/produtos-lista/produto/produto.component.html
@@ -9,6 +9,6 @@
 	</ion-card-header>
 	<ion-card-content>
 		<ion-icon name="cart"></ion-icon>
-		<p>{{distance}}</p>
+		<p> {{distance}} metros de distância</p>
 	</ion-card-content>
 </ion-card>
