--- a/src/app/components/produtos-lista/produtos-lista.component.html
+++ b/src/app/components/produtos-lista/produtos-lista.component.html
@@ -6,5 +6,6 @@
 	[productName] = "product.title"
 	[isPromotional] = "product.isPromotional"
 	[distance] = "product.distance"
+	[showDistance] = "showDistance"
 >
 </app-produto>
