--- a/src/app/components/menu-lateral/menu-lateral.component.html
+++ b/src/app/components/menu-lateral/menu-lateral.component.html
@@ -18,7 +18,7 @@
 				<ion-icon name="navigate-outline" slot="start"></ion-icon>
 				<ion-label>Adicionar Produto</ion-label>
 			</ion-item>
-			<ion-item>
+			<ion-item (click)="changeNavigation('/produto')">
 				<ion-icon name="cloud-upload-outline" slot="start"></ion-icon>
 				<ion-label>Produtos Enviados</ion-label>
 			</ion-item>
