--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <ion-header>
 	<ion-toolbar color="primary">
 		<div id="header-content">
-			<ion-title>QUANTU</ion-title>
+			<ion-title (click)="redirectToHome()">QUANTU</ion-title>
 			<ion-buttons slot="end" *ngIf="hasMenu">
 				<ion-menu-button auto-hide="false"></ion-menu-button>
 			</ion-buttons>
