--- a/src/app/components/menu-lateral/menu-lateral.component.html
+++ b/src/app/components/menu-lateral/menu-lateral.component.html
@@ -20,7 +20,7 @@
 			</ion-item>
 			<ion-item (click)="changeNavigation('/produto')">
 				<ion-icon name="cloud-upload-outline" slot="start"></ion-icon>
-				<ion-label>Produtos Enviados</ion-label>
+				<ion-label>Meus Produtos</ion-label>
 			</ion-item>
 			<ion-item (click)="changeNavigation('/login')">
 				<ion-icon name="exit-outline" slot="start"></ion-icon>
