--- a/src/app/components/menu-lateral/menu-lateral.component.html
+++ b/src/app/components/menu-lateral/menu-lateral.component.html
@@ -14,7 +14,7 @@
 				<ion-icon name="cart" slot="start"></ion-icon>
 				<ion-label>Produtos Perto de Você</ion-label>
 			</ion-item>
-			<ion-item (click)="changeNavigation('/photo')">
+			<ion-item (click)="changeNavigation('/addProduct')">
 				<ion-icon name="navigate-outline" slot="start"></ion-icon>
 				<ion-label>Adicionar Produto</ion-label>
 			</ion-item>
