refactor: refatoracao para geolocalizar produtos por cidade/estado

--- a/src/app/components/produtos-lista/produtos-lista.component.html
+++ b/src/app/components/produtos-lista/produtos-lista.component.html
@@ -1,8 +1,7 @@
 <app-produto
 	*ngFor="let product of productsList"
-	[image] = "product.image"
 	[price] = "product.price"
-	[marketName] = "product.market_name"
+	[marketName] = "product.marketName"
 	[productName] = "product.title"
 	[isPromotional] = "product.isPromotional"
 	[distance] = "product.distance"
