--- a/src/app/pages/product/product.page.html
+++ b/src/app/pages/product/product.page.html
@@ -4,7 +4,7 @@
 	<app-header [hasMenu]="true"></app-header>
 
 	<ion-fab vertical="bottom" horizontal="end" slot="fixed" >
-		<ion-fab-button (click)="redirectToTakePhoto()">
+		<ion-fab-button (click)="addProduct()">
 			<ion-icon name="add-outline"></ion-icon>
 		</ion-fab-button>
 	</ion-fab>
