--- a/src/app/components/produtos-lista/produtos-lista.component.html
+++ b/src/app/components/produtos-lista/produtos-lista.component.html
@@ -6,5 +6,9 @@
 	[isPromotional] = "product.isPromotional"
 	[distance] = "product.distance"
 	[showDistance] = "showDistance"
+	[latitude]="product.latitude"
+	[longitude]="product.longitude"
+	[productId]="product.productId"
+	[numberLikes]="product.likes"
 >
 </app-produto>
