--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,6 +3,15 @@
 <ion-content id="main-content">
 	<app-header [hasMenu]="true"></app-header>
 
+	<p>Categorias</p>
+	<app-categories
+		[categoriesList]="categoriesList"
+		(clicked)="addCategorie($event)"
+	></app-categories>
+	<app-categories
+		[categoriesList]="categoriesListClicked"
+		(clicked)="removeCategorie($event)"
+	></app-categories>
 	<ion-fab vertical="bottom" horizontal="end" slot="fixed" >
 		<ion-fab-button (click)="redirectToAddProduct()">
 			<ion-icon name="add-outline"></ion-icon>
