refactor: adicionando localizacao do usuario pelo endereço informado

--- a/src/app/auth/cadastro/cadastro.page.html
+++ b/src/app/auth/cadastro/cadastro.page.html
@@ -5,6 +5,7 @@
 		[formGroup] = "registerForm"
 		[formFields] = "formFields"
 		[formButtons] = "formButtons"
+		[showSelectStateCity] = "true"
 	></app-form>
 </ion-content>
 
