--- a/src/app/components/produtos-lista/produto/produto.component.html
+++ b/src/app/components/produtos-lista/produto/produto.component.html
@@ -1,11 +1,13 @@
 <ion-card class="classCss">
 	<ion-card-header>
-		<ion-card-subtitle><a [href]="urlToMaps" target="_blank">{{marketName}}</a></ion-card-subtitle>
+		<ion-card-subtitle>
+			{{marketName}}
+			<a [href]="urlToMaps" target="_blank"> Como chegar?</a>
+		</ion-card-subtitle>
 	  	<ion-card-title>{{productName}} - R$ {{price}}</ion-card-title>
 		<ion-card-subtitle *ngIf="isPromotional">Produto registrado em perído promocional</ion-card-subtitle>
 	</ion-card-header>
-	<ion-card-content *ngIf="showDistance">
-		<p> {{distance}} Km de distância</p>
+	<ion-card-content>
 		<ion-row>
 			<ion-icon name="thumbs-up-sharp" [color]="isLike ? 'primary' : 'ligth'" (click)="changeIcon()"></ion-icon>
 			<ion-text [color]="isLike ? 'primary' : 'ligth'">{{numberLikes}} curtidas</ion-text>
