--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -7,6 +7,7 @@
 			[formGroup] = "registerForm"
 			[formFields] = "formFields"
 			[formButtons] = "formButtons"
+			[showSelectStateCity] = "true"
 		></app-form>
 	</ion-content>
 </ion-content>
