--- a/src/app/components/produtos-lista/produto/produto.component.html
+++ b/src/app/components/produtos-lista/produto/produto.component.html
@@ -9,8 +9,8 @@
 	</ion-card-header>
 	<ion-card-content>
 		<ion-row>
-			<ion-icon name="thumbs-up-sharp" [color]="isLike ? 'primary' : 'ligth'" (click)="changeIcon()"></ion-icon>
-			<ion-text [color]="isLike ? 'primary' : 'ligth'">{{numberLikes}} curtidas</ion-text>
+			<ion-icon name="thumbs-up-sharp" [color]="isLiked ? 'primary' : 'ligth'" (click)="changeIcon()"></ion-icon>
+			<ion-text [color]="isLiked ? 'primary' : 'ligth'">{{numberLikes}} curtidas</ion-text>
 		</ion-row>
 	</ion-card-content>
 </ion-card>
