--- a/src/app/components/produtos-lista/produtos-lista.component.html
+++ b/src/app/components/produtos-lista/produtos-lista.component.html
@@ -6,5 +6,6 @@
 	[isPromotional] = "product.isPromotional"
 	[productId]="product.productId"
 	[numberLikes]="product.likes"
+	[isLiked]="product.isLiked"
 >
 </app-produto>
