--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -4,7 +4,7 @@ ion-input,#autocomplete {
 	border:none;
 	width: 100%;
 	height: 50px;
-	padding: 15px;
+	padding-left: 7px;
 	background-color: #f4f5f8;
 	text-decoration: none;
 }
@@ -25,4 +25,10 @@ ion-input[type=number] {
 
 input:focus {
 	outline:none!important;
+}
+
+ion-select {
+	--placeholder-opacity: 1 !important;
+	padding-left: 5px;
+	--placeholder-color: #7c7c7c;
 }
