--- a/src/app/components/produtos-lista/produtos-lista.component.html
+++ b/src/app/components/produtos-lista/produtos-lista.component.html
@@ -7,5 +7,6 @@
 	[productId]="product.productId"
 	[numberLikes]="product.likes"
 	[isLiked]="product.isLiked"
+	[category]="product?.category"
 >
 </app-produto>
