--- a/src/app/components/produtos-lista/produtos-lista.component.html
+++ b/src/app/components/produtos-lista/produtos-lista.component.html
@@ -8,5 +8,7 @@
 	[numberLikes]="product.likes"
 	[isLiked]="product.isLiked"
 	[category]="product?.category"
+	[isDelete]="isDelete"
+	(clickedDelete)="handleClick($event)"
 >
 </app-produto>
