--- a/src/app/pages/product/product.page.html
+++ b/src/app/pages/product/product.page.html
@@ -12,6 +12,7 @@
 
 	<app-produtos-lista
 		[productsList]="productsList"
-		[showDistance]="showDistance"
+		[isDelete]="true"
+		(clickedDelete)="deleteProduct($event)"
 	></app-produtos-lista>
 </ion-content>
