--- a/src/app/components/produtos-lista/produtos-lista.component.html
+++ b/src/app/components/produtos-lista/produtos-lista.component.html
@@ -7,6 +7,7 @@
 	[productId]="product.productId"
 	[numberLikes]="product.likes"
 	[isLiked]="product.isLiked"
+	[isFeedBack]="product.isFeedBack"
 	[category]="product?.category"
 	[isDelete]="isDelete"
 	(clickedDelete)="handleClick($event)"
