refactor: removida a alteracao de cor padrao do Chrome no Input ao autocompletar

--- a/src/global.scss
+++ b/src/global.scss
@@ -36,3 +36,22 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+// Remover cor de fundo que o Chrome coloca no Input
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+:root {
+	--ion-safe-area-top: 20px;
+	--ion-safe-area-bottom: 22px;
+}
