--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,13 +1,11 @@
-#header-content {
-	display: flex;
-	flex-direction: row;
+ion-header ion-toolbar:first-of-type {
+    padding: 0;
+}
+
+ion-toolbar {
+	text-align: center;
 }
 
 ion-title {
-	width: 100%;
-	position: absolute;
-	text-align: center;
-	top: 50%;
-	transform: translateY(-50%);
 	cursor: pointer;
 }
