--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,8 @@
+ion-header {
+	position: fixed;
+	top: 0;
+}
+
 #header-content {
 	display: flex;
 	flex-direction: row;
@@ -12,6 +17,6 @@ ion-title {
 	cursor: pointer;
 }
 
-ion-header ion-toolbar:first-of-type {
-    padding: 0;
+.space {
+	height: 60px;
 }
