--- a/src/app/components/menu-lateral/menu-lateral.component.scss
+++ b/src/app/components/menu-lateral/menu-lateral.component.scss
@@ -1,3 +1,12 @@
 ion-item {
 	cursor: pointer;
 }
+
+.points-user {
+	position: absolute;
+	right: 0;
+	top: 20px;
+	margin-right: 20px;
+	color: #FFFFFF;
+	padding: 0;
+}
