feat: adicionado informacao relacionado ao dia que o produto foi cadastrado

--- a/src/app/components/produtos-lista/produtos-lista.component.html
+++ b/src/app/components/produtos-lista/produtos-lista.component.html
@@ -10,6 +10,7 @@
 	[isFeedBack]="product.isFeedBack"
 	[category]="product?.category"
 	[isDelete]="isDelete"
+	[creat_at]="product.creat_at"
 	(clickedDelete)="handleClick($event)"
 >
 </app-produto>
