--- a/src/app/components/produtos-lista/produto/produto.component.html
+++ b/src/app/components/produtos-lista/produto/produto.component.html
@@ -17,6 +17,7 @@
 		</ion-card-subtitle>
 	</ion-card-header>
 	<ion-card-content>
+		<p>Produto cadastrado em: {{ publishedIn }}</p>
 		<p>Categoria: {{category}}</p>
 		<ion-row>
 			<div (click)="changeIcon()" class="iconClick">
@@ -24,11 +25,14 @@
 			</div>
 			<ion-text [color]="isLiked ? 'primary' : 'ligth'">{{numberLikes}} curtidas</ion-text>
 		</ion-row>
-		<ion-row  class="ion-margin-top">
+		<ion-row>
 			<div class="align-center" (click)="handleFeedBack()">
 				<ion-icon [color]="isFeedBack ? 'primary' : 'ligth'" name="sad-outline"></ion-icon>
 				<ion-text [color]="isFeedBack ? 'primary' : 'ligth'">Não encontrei o Produto</ion-text>
 			</div>
 		</ion-row>
+		<ion-button class="ion-margin-top">
+			Comentários
+		</ion-button>
 	</ion-card-content>
 </ion-card>
