--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -3,35 +3,35 @@
 	<app-header [hasMenu]="true"></app-header>
 
 	<ion-card>
-		<ion-card-header>
+		<ion-card-header *ngIf="productInfo">
 			<ion-row class="ion-align-items-center content-back" (click)="redirectHome()">
 				<ion-icon color="dark" name="arrow-back-outline"></ion-icon>
 				<p>Voltar</p>
 			</ion-row>
-			<ion-card-title>Produto Teste - R$ 25.00</ion-card-title>
+			<ion-card-title>{{ productInfo.title }} - R$ {{ productInfo.price }}</ion-card-title>
 
-			<ion-card-subtitle color="primary">Comper</ion-card-subtitle>
-			<ion-card-subtitle>Categoria: Higiene</ion-card-subtitle>
-			<ion-card-subtitle>Cadastrado em: 14/09/2021</ion-card-subtitle>
+			<ion-card-subtitle color="primary">{{ productInfo.marketName }}</ion-card-subtitle>
+			<ion-card-subtitle>Categoria: {{ productInfo.category }}</ion-card-subtitle>
+			<ion-card-subtitle>Cadastrado em: {{ productInfo.creat_at }}</ion-card-subtitle>
 		</ion-card-header>
-		<ion-card-content>
+		<ion-card-content *ngIf="productInfo">
 			<ion-grid>
-				<ion-row>
+				<ion-row *ngFor="let comment of comments">
 					<ion-col size="2">
 						<ion-icon name="person-circle-outline" size="large"></ion-icon>
 					</ion-col>
 					<ion-col>
 						<div class="comments">
 							<ion-row>
-								<ion-text color="primary">Felipe Nascimento Santos</ion-text>
+								<ion-text color="primary">{{comment.userName}}</ion-text>
 							</ion-row>
-							<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia,</p>
+							<p>{{comment.message}}</p>
 						</div>
 					</ion-col>
 				</ion-row>
 
 				<ion-row>
-					<ion-textarea placeholder="Escreva um Comentário..."></ion-textarea>
+					<ion-textarea [(ngModel)]='message' placeholder="Escreva um Comentário..."></ion-textarea>
 				</ion-row>
 			</ion-grid>
 			<ion-button (click)="addNewComment()">Enviar</ion-button>
