--- a/src/app/pages/product-details/product-details.page.scss
+++ b/src/app/pages/product-details/product-details.page.scss
@@ -19,6 +19,10 @@ ion-textarea {
 	border-radius: 3px;
 }
 
+ion-card-title {
+	text-transform: capitalize;
+}
+
 .content-back {
 	cursor: pointer;
 	p {
