--- a/src/app/components/produtos-lista/produto/produto.component.html
+++ b/src/app/components/produtos-lista/produto/produto.component.html
@@ -28,7 +28,10 @@
 			</div>
 		</ion-row>
 		<ion-button class="ion-margin-top" (click)="navigateProductDetail()">
-			Comentários
+			ver comentários
+		</ion-button>
+		<ion-button class="ion-margin-top" (click)="addToShoppingList()">
+			adicionar à lista de compras
 		</ion-button>
 	</ion-card-content>
 </ion-card>
