--- a/src/app/pages/purchase-list/purchase-list.page.html
+++ b/src/app/pages/purchase-list/purchase-list.page.html
@@ -10,14 +10,9 @@
 				<ion-label>Preço</ion-label>
 			</ion-item>
 			<ion-item *ngFor="let item of purchaseList">
-				<ion-label>{{item.productName}}</ion-label>
-				<ion-label>{{item.market}}</ion-label>
-				<ion-label>{{item.price}}</ion-label>
-
-
-				<!-- <p>{{item.productName}}</p>
-				<p>{{ item.market }}</p>
-				<p>{{ item.price }}</p> -->
+				<ion-label>{{item.title}}</ion-label>
+				<ion-label>{{item.marketName}}</ion-label>
+				<ion-label>R$ {{item.price}}</ion-label>
 			</ion-item>
 		</ion-list>
 </ion-content>
